implemented the google sign in

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.85.9",
     "axios": "^1.11.0",
     "axios-cache-interceptor": "^1.8.2",
+    "framer-motion": "^12.23.22",
     "lodash.debounce": "^4.0.8",
     "next": "15.5.2",
     "react": "19.1.0",
