--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-spinners": "^0.17.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
