--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.11.0",
     "axios-cache-interceptor": "^1.8.2",
     "framer-motion": "^12.23.22",
+    "html-truncate": "^1.2.2",
     "lodash.debounce": "^4.0.8",
+    "naija-state-local-government": "^1.1.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-spinners": "^0.17.0",
     "use-places-autocomplete": "^4.0.1"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/html-truncate": "^1.2.4",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
