--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios-cache-interceptor": "^1.8.2",
     "framer-motion": "^12.23.22",
     "html-truncate": "^1.2.2",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "naija-state-local-government": "^1.1.2",
     "next": "15.5.2",
